--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "react-interpolate-component": "^0.12.0",
+    "react-js-pagination": "^3.0.3",
     "react-player": "^1.15.3",
     "react-router-dom": "5.1.2",
     "react-translate-component": "^0.15.1"
